--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
             border: 1px solid #bdc3c7;
             background-color: #fff;
             font-size: 30px;
+            color: #000;
         }
 
         .dark-mode .dropdown {
